Add simple AST interpreter